# Novus-Agenti

./: .gitignore  CLAUDE.md  EXECUTIONS.md  FAILURES.md  README.md  RESOURCE-DOCS-WIKI.md  local.properties.example  requirements-compile.txt  settings.gradle.kts  sub-agent.agent.yaml
.claude/: settings.json
.claude/hooks/: session-start.sh  stop-reminder.sh
.github/workflows/: build-apk.yml  build-llama-server.yml  failure-monitor.yml  mirror-sherpa-aar.yml  stage-colab.yml  stage-colab.yml.disabled
agents/: build-runner.yaml  neuralmash-builder.system.md  omni-claws-master.agent.yaml  sub-agent.system.md
agents/.snapshots/: README.md  neuralmash-builder-post-update.yaml  neuralmash-builder-pre-update.yaml
compile/: compile_qwen3_5_9b.py  manifest.yaml
daemon/: CMakeLists.txt  build.sh
daemon/src/: engine.cpp  engine.h  http_server.cpp  http_server.h  main.cpp  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h
geniex-daemon/: CMakeLists.txt
geniex-daemon/src/: main.cpp
gradle/: libs.versions.toml
horizons/: build.gradle.kts
horizons/src/main/: AndroidManifest.xml
horizons/src/main/assets/genie/: .gitignore
horizons/src/main/java/com/horizons/: CrashDiagnosticActivity.kt  HorizonsApplication.kt  MainActivity.kt  ModelImportActivity.kt
horizons/src/main/res/drawable/: horizons_backdrop.xml  ic_horizon_sun.xml  ic_mic.xml  ic_settings_cog.xml  ic_tile_lightbulb.xml
horizons/src/main/res/layout/: widget_chat.xml
horizons/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
horizons/src/main/res/values/: colors.xml  strings.xml  themes.xml
horizons/src/main/res/xml/: accessibility_service_config.xml  chat_widget_info.xml  ime_method.xml  tts_engine.xml  voice_interaction_service.xml
knowledge/: README.md
knowledge/claude-code-reference/: PROMPT-CACHING.md
knowledge/daemon-reference/: GPT-DAEMON-REFERENCE.md  NPU-RUNTIME-PATHS.md
knowledge/device-inventory/: DEVICE-INVENTORY.md
knowledge/fragmented-qat/: fraqat-paper.jsonl  fraqat-paper.md
knowledge/gemini-query/: july-3rd-horizons-apk.md  notebooklm-prompt-caching-planning-qa.jsonl  notebooklm-prompt-caching-planning-qa.md  qwen-3.5-9b-compilation-and-quantization.md  qwen-3.5-9b-q4_0.md
knowledge/google-dev-docs/automated-build-w-github/: automated-build-android-github-actions-urls.txt  automated-build-android-github-actions.jsonl  automated-build-android-github-actions.md
knowledge/omni-claw-defined/: Omni-claw-knowledge-synthesis-architecture.jsonl  omni-claw-blueprint.jsonl  omni-claw-blueprint.md  repo-fork-asset-list-source.md  repo-fork-asset-list.jsonl  welcome-to-the-birth-of-novus-agenti-omni-claw.txt
knowledge/omni-claw-defined/workbench/: 00-TILE-HUB-ARCHITECTURE.md  01-fusebox-design-conversation.md  02-workbench-guide.md  03-workflow-storage-to-switch.md
knowledge/proofs/: overlayd-ai-technical-guide.jsonl  overlayd-ai-technical-guide.md  socketsweep-readme.jsonl  socketsweep-readme.md
knowledge/qairt-sdk/: README.md  api.md  backend.md  context.md  graph.md  htp.jsonl  htp.md  overview.md  tensor.md
knowledge/research-npu/: scaling-llm-test-time-compute-npu-urls.txt  scaling-llm-test-time-compute-npu.jsonl  scaling-llm-test-time-compute-npu.md
media-daemon/: CMakeLists.txt
media-daemon/src/: main.cpp
models/: manifest.yaml
notebooks/: compile_qwen3_5_9b.ipynb
release/: debug.keystore
rules/: AAR_DECOMPILE.md  AT_BAT_PROTOCOL.md  CACHE_PROMPT_RULES.md  GIT_HYGIENE.md  README.md
scripts/: compile_qwen3_5_9b.py  compile_qwen3_vl.py  fetch_qai_logs.py
shared/: build.gradle.kts
skills/horizons-wiki/: SKILL.md
skills/memory-as-skill/: SKILL.md
skills/memory-as-skill/memory/: general.md
skills/memory-as-skill/memory/active/: novus-agenti.md
skills/memory-as-skill/memory/archive/: neuroomni.md
skills/project-memory/: SKILL.md
skills/termux-mobile-dev/: SKILL.md
tools/: failures.sh
watchdog/: build.gradle.kts
watchdog/src/main/: AndroidManifest.xml
watchdog/src/main/res/drawable/: ic_watchdog_cog_rpm.xml
watchdog/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
watchdog/src/main/res/values/: colors.xml  strings.xml  themes.xml
wiki/: APP-SOTU-AUDIT.md  BOOT-SEQUENCE.md  BUILD-ACTION-PLAN.md  COMPILE-PIPELINE.md  EDGE-MODEL-LISTS.md  FAILURE_LOG.md  FEATURE-SPEC.md  GENIEX-DAEMON-PLAN.md  GPT-DAEMON-REFERENCE.md  GPT-OSS-Reference.md  HOME-REDESIGN-SPEC.md  HOMEGRID-REBUILD-SPEC.md  HORIZONS-APP-DEBUG-PLAN.md  HORIZONS-BLUEPRINTS.md  HomeGridSim.tsx  JOB_EXECUTION_LOG.md  MASTER-SESSION.md  NPU-RUNTIME-PATHS.md  OPERATOR-PUNCH-LIST.md  PROMPT-CACHING.md  REFERENCE-IMPLEMENTATIONS.md  RESEARCH-CROSSREF.md  SESSION10-HANDOFF.md  SESSION11-HANDOFF.md  SESSION12-HANDOFF.md  SESSION13-HANDOFF.md  SESSION14-HANDOFF.md  SESSION15-HANDOFF.md  SESSION16-HANDOFF.md  SESSION17-COMPILE-LAUNCH.md  SESSION17-LAUNCH.md  SESSION18-HANDOFF.md  SESSION5-HANDOFF.md  SESSION6-HANDOFF.md  SESSION8-HANDOFF.md  SESSION9-HANDOFF.md  WORKING-PATH-ANALYSIS.md
wiki/home-redesign-img/: README.md
wiki/master-wiki/: omni-claw-knowledge-synthesis-architecture.jsonl  omni-claw-knowledge-synthesis-architecture.md
wiki/research/: android-reverse-engineering-skill.md  claude-skills.md  omniNeural-4b-status-correction.md  repo-fork-asset-list.md
(+98 files in other folders)
